Move StateDB code to new package

--- a/packages/apputils-extension/tsconfig.json
+++ b/packages/apputils-extension/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../settingregistry"
     },
     {
+      "path": "../statedb"
+    },
+    {
       "path": "../ui-components"
     }
   ]
