--- a/packages/filebrowser-extension/tsconfig.json
+++ b/packages/filebrowser-extension/tsconfig.json
@@ -36,6 +36,9 @@
       "path": "../settingregistry"
     },
     {
+      "path": "../statedb"
+    },
+    {
       "path": "../statusbar"
     },
     {
