--- a/packages/settingeditor/tsconfig.json
+++ b/packages/settingeditor/tsconfig.json
@@ -15,9 +15,6 @@
       "path": "../codeeditor"
     },
     {
-      "path": "../coreutils"
-    },
-    {
       "path": "../inspector"
     },
     {
@@ -25,6 +22,9 @@
     },
     {
       "path": "../settingregistry"
+    },
+    {
+      "path": "../statedb"
     },
     {
       "path": "../ui-components"
