--- a/packages/apputils/tsconfig.json
+++ b/packages/apputils/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../settingregistry"
     },
     {
+      "path": "../statedb"
+    },
+    {
       "path": "../ui-components"
     }
   ]
