--- a/packages/filebrowser/package.json
+++ b/packages/filebrowser/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/docmanager": "^2.0.0-alpha.4",
     "@jupyterlab/docregistry": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/statedb": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
     "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
