--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/statedb": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/disposable": "^1.3.2",
     "@lumino/polling": "^1.0.1",
