--- a/packages/settingregistry/package.json
+++ b/packages/settingregistry/package.json
@@ -31,7 +31,7 @@
     "watch": "tsc -b -w --listEmittedFiles"
   },
   "dependencies": {
-    "@jupyterlab/coreutils": "^4.0.0-alpha.4",
+    "@jupyterlab/statedb": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/disposable": "^1.3.2",
     "@lumino/signaling": "^1.3.2",
@@ -39,6 +39,7 @@
     "json5": "^2.1.1"
   },
   "devDependencies": {
+    "@types/json5": "^0.0.30",
     "rimraf": "~3.0.0",
     "typescript": "~3.7.3"
   },
