--- a/packages/statedb/tsconfig.json
+++ b/packages/statedb/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "module": "commonjs",
+    "types": ["node"]
   },
   "include": ["src/*"]
 }
