--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -4,13 +4,9 @@
     "outDir": "lib",
     "rootDir": "src",
     "module": "commonjs",
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "references": [
     {
       "path": "../coreutils"
