--- a/packages/settingregistry/tsconfig.json
+++ b/packages/settingregistry/tsconfig.json
@@ -4,12 +4,8 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "files": [
-    "src/plugin-schema.json"
-  ],
-  "include": [
-    "src/*"
-  ],
+  "files": ["src/plugin-schema.json"],
+  "include": ["src/*"],
   "references": [
     {
       "path": "../statedb"
