--- a/packages/terminal-extension/tsconfig.json
+++ b/packages/terminal-extension/tsconfig.json
@@ -3,13 +3,9 @@
   "compilerOptions": {
     "outDir": "lib",
     "rootDir": "src",
-    "types": [
-      "webpack-env"
-    ]
+    "types": ["webpack-env"]
   },
-  "include": [
-    "src/*"
-  ],
+  "include": ["src/*"],
   "references": [
     {
       "path": "../application"
