--- a/packages/statedb/package.json
+++ b/packages/statedb/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
-    "docs": "typedoc src --tsconfig typedoc-tsconfig.json",
+    "docs": "typedoc src",
     "prepublishOnly": "npm run build",
     "watch": "tsc -b -w --listEmittedFiles"
   },
