--- a/packages/settingregistry/package.json
+++ b/packages/settingregistry/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@jupyterlab/statedb": "^2.0.0-alpha.4",
+    "@lumino/commands": "^1.9.0",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/disposable": "^1.3.2",
     "@lumino/signaling": "^1.3.2",
