--- a/packages/ui-components/tsconfig.json
+++ b/packages/ui-components/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
-    "types": ["webpack-env", "node"],
-    "rootDir": "src"
+    "rootDir": "src",
+    "strictNullChecks": true,
+    "types": ["webpack-env", "node"]
   },
   "include": ["src/**/*"],
   "references": [
