type/signature fixes

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,23 +1,24 @@
-node_modules
+**/build
 **/node_modules
 **/lib
-**/build
+**/package.json
 **/static
-jupyterlab/schemas
-jupyterlab/themes
-jupyterlab/geckodriver
-jupyterlab/staging/yarn.js
-jupyterlab/staging/index.js
+tests/**/coverage
+
+.eggs
 dev_mode/index.js
 dev_mode/schemas
 dev_mode/static
 dev_mode/themes
 dev_mode/workspaces
+docs/_build
+docs/api
 examples/app/build
 examples/app/themes
 examples/app/schemas
-tests/**/coverage
-docs/_build
-docs/api
-**/package.json
-.eggs
+jupyterlab/schemas
+jupyterlab/themes
+jupyterlab/geckodriver
+jupyterlab/staging/yarn.js
+jupyterlab/staging/index.js
+packages/ui-components/src/icon/iconimports.ts
