simplified JLIcon styling for lumino; moved all tab icons to JLIcon
All filetype icons in tabs and all extension icons in the sidebar are now JLIcons

--- a/packages/running-extension/package.json
+++ b/packages/running-extension/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/running": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1"
   },
   "devDependencies": {
