--- a/packages/notebook-extension/package.json
+++ b/packages/notebook-extension/package.json
@@ -53,6 +53,7 @@
     "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/statedb": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/commands": "^1.9.0",
     "@lumino/coreutils": "^1.4.0",
