post-rebase cleanup and bugfixes

--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -51,7 +51,7 @@
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "@types/react": "~16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "~16.9.4",
     "@types/webpack-env": "^1.14.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
