--- a/packages/htmlviewer/package.json
+++ b/packages/htmlviewer/package.json
@@ -35,6 +35,7 @@
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/docregistry": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/signaling": "^1.3.2",
     "react": "~16.9.0"
