migrated all jupyter icon and most arrow icon usages to JLIcon

--- a/packages/help-extension/package.json
+++ b/packages/help-extension/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/inspector": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/widgets": "^1.9.4",
     "react": "~16.9.0"
   },
