--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -66,5 +66,8 @@
     "@types/webpack": "^4.41.0",
     "@types/which": "^1.3.2",
     "rimraf": "~3.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
