--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -49,5 +49,8 @@
     "@types/node": "^12.12.17",
     "rimraf": "~3.0.0",
     "typescript": "~3.7.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
