--- a/testutils/package.json
+++ b/testutils/package.json
@@ -53,5 +53,8 @@
     "@types/node-fetch": "^2.5.4",
     "lighthouse": "5.6.0",
     "typescript": "~3.7.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
