--- a/packages/running/package.json
+++ b/packages/running/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/disposable": "^1.3.2",
     "@lumino/signaling": "^1.3.2",
