--- a/packages/terminal-extension/package.json
+++ b/packages/terminal-extension/package.json
@@ -44,6 +44,7 @@
     "@jupyterlab/services": "^5.0.0-alpha.4",
     "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/terminal": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/widgets": "^1.9.4"
   },
