--- a/packages/launcher-extension/package.json
+++ b/packages/launcher-extension/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/application": "^2.0.0-alpha.4",
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
     "@jupyterlab/launcher": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/widgets": "^1.9.4"
