--- a/packages/settingeditor-extension/package.json
+++ b/packages/settingeditor-extension/package.json
@@ -42,7 +42,8 @@
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
     "@jupyterlab/settingeditor": "^2.0.0-alpha.4",
     "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
-    "@jupyterlab/statedb": "^2.0.0-alpha.4"
+    "@jupyterlab/statedb": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
