--- a/packages/vega5-extension/package.json
+++ b/packages/vega5-extension/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@jupyterlab/rendermime-interfaces": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/widgets": "^1.9.4",
     "vega": "^5.9.0",
