--- a/packages/vega5-extension/tsconfig.json
+++ b/packages/vega5-extension/tsconfig.json
@@ -10,6 +10,9 @@
   "references": [
     {
       "path": "../rendermime-interfaces"
+    },
+    {
+      "path": "../ui-components"
     }
   ]
 }
