Switch Auto-Labeler to Periodic Labeler
**Description**
Switch automatic labelling action from `actions/labeler` to
`paulfantom/periodic-labeler` to work around the issue of the
labeler failing on PRs from forked repositories.

**Motivation**
Most PRs submitted to JupyterLab are from forked repositories, which
is not compatible with the `actions/labeler` workflow.

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,13 +1,18 @@
 name: 'Pull Request Labeler'
 
-# This workflow is triggered whenever a PR is opened, changed, or reopened.
-on: [pull_request]
 
+name: Pull Request Labeler
+# This workflow is supposed to run every 5 minutes
+on:
+  schedule:
+    - cron: '*/5 * * * *'
 jobs:
   triage:
     name: Update PR Labels
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@v2
-        with:
-          repo-token: '${{ secrets.GITHUB_TOKEN }}'
+      - uses: paulfantom/periodic-labeler@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          LABEL_MAPPINGS_FILE: .github/labeler.yml
