--- a/testutils/package.json
+++ b/testutils/package.json
@@ -44,6 +44,7 @@
     "@lumino/signaling": "^1.3.4",
     "fs-extra": "^8.1.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest-raw-loader": "^1.0.1",
     "json-to-html": "~0.1.2",
     "node-fetch": "^2.6.0",
     "path": "~0.12.7",
