--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0",
-    "@jupyterlab/rendermime": "^1.0.0",
+    "@jupyterlab/application": "^2.0.0-beta.2",
+    "@jupyterlab/rendermime": "^2.0.0-beta.2",
     "mathjax-full": "^3.0.0"
   },
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "typescript": "~3.5.1"
+    "typescript": "~3.7.1"
   },
   "jupyterlab": {
     "extension": true
