--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -52,8 +52,7 @@
     "@lumino/polling": "^1.0.3",
     "@lumino/properties": "^1.1.6",
     "@lumino/signaling": "^1.3.4",
-    "@lumino/widgets": "^1.9.7",
-    "font-awesome": "~4.7.0"
+    "@lumino/widgets": "^1.9.7"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
@@ -64,11 +63,6 @@
     "access": "public"
   },
   "jupyterlab": {
-    "coreDependency": true,
-    "extraStyles": {
-      "font-awesome": [
-        "css/font-awesome.min.css"
-      ]
-    }
+    "coreDependency": true
   }
 }
