replaced JLIcon (and unwanted React sub-dep) in rendermime-interfaces

--- a/packages/rendermime-interfaces/package.json
+++ b/packages/rendermime-interfaces/package.json
@@ -31,8 +31,8 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@jupyterlab/ui-components": "^2.0.0-beta.2",
     "@lumino/coreutils": "^1.4.2",
+    "@lumino/virtualdom": "^1.4.0",
     "@lumino/widgets": "^1.10.0"
   },
   "devDependencies": {
