--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -44,6 +44,7 @@
     "commander": "~4.0.1",
     "crypto": "~1.0.1",
     "dependency-graph": "^0.8.1",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "fs-extra": "^8.1.0",
     "glob": "~7.1.6",
     "inquirer": "^7.0.0",
@@ -57,6 +58,7 @@
     "webpack": "^4.41.2"
   },
   "devDependencies": {
+    "@types/duplicate-package-checker-webpack-plugin": "^2.1.0",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/inquirer": "^6.5.0",
