--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -35,6 +35,7 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@jupyterlab/apputils": "^2.0.0-beta.2",
     "@jupyterlab/coreutils": "^4.0.0-beta.2",
     "@jupyterlab/docregistry": "^2.0.0-beta.2",
@@ -52,8 +53,7 @@
     "@lumino/polling": "^1.0.3",
     "@lumino/properties": "^1.1.6",
     "@lumino/signaling": "^1.3.4",
-    "@lumino/widgets": "^1.9.7",
-    "font-awesome": "~4.7.0"
+    "@lumino/widgets": "^1.9.7"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
@@ -66,8 +66,9 @@
   "jupyterlab": {
     "coreDependency": true,
     "extraStyles": {
-      "font-awesome": [
-        "css/font-awesome.min.css"
+      "@fortawesome/fontawesome-free": [
+        "css/all.min.css",
+        "css/v4-shims.min.css"
       ]
     }
   }
