--- a/packages/extensionmanager/package.json
+++ b/packages/extensionmanager/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/services": "^5.0.0-beta.2",
     "@jupyterlab/ui-components": "^2.0.0-beta.2",
     "@lumino/messaging": "^1.3.3",
+    "@lumino/polling": "^1.0.3",
     "react": "~16.9.0",
     "react-paginate": "^6.3.2",
     "semver": "^6.3.0"
