--- a/packages/settingeditor-extension/package.json
+++ b/packages/settingeditor-extension/package.json
@@ -43,7 +43,8 @@
     "@jupyterlab/settingeditor": "^2.0.0-beta.2",
     "@jupyterlab/settingregistry": "^2.0.0-beta.2",
     "@jupyterlab/statedb": "^2.0.0-beta.2",
-    "@jupyterlab/ui-components": "^2.0.0-beta.2"
+    "@jupyterlab/ui-components": "^2.0.0-beta.2",
+    "@lumino/disposable": "^1.3.4"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
