Update to JupyterLab 2.0

--- a/package.json
+++ b/package.json
@@ -43,46 +43,47 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.1.0",
-    "@jupyterlab/apputils": "^1.1.0",
-    "@jupyterlab/codeeditor": "^1.1.0",
-    "@jupyterlab/console": "^1.1.0",
-    "@jupyterlab/coreutils": "^3.1.0",
-    "@jupyterlab/docregistry": "^1.1.0",
-    "@jupyterlab/fileeditor": "^1.1.0",
-    "@jupyterlab/launcher": "^1.1.0",
-    "@jupyterlab/observables": "^2.4.0",
-    "@jupyterlab/notebook": "^1.1.0",
-    "@jupyterlab/services": "^4.1.0",
-    "@phosphor/algorithm": "^1.2.0",
-    "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/disposable": "^1.2.0",
-    "@phosphor/widgets": "^1.8.0",
+    "@jupyterlab/application": "^2.0.0-beta.2",
+    "@jupyterlab/apputils": "^2.0.0-beta.2",
+    "@jupyterlab/codeeditor": "^2.0.0-beta.2",
+    "@jupyterlab/console": "^2.0.0-beta.2",
+    "@jupyterlab/coreutils": "^4.0.0-beta.2",
+    "@jupyterlab/docregistry": "^2.0.0-beta.2",
+    "@jupyterlab/fileeditor": "^2.0.0-beta.2",
+    "@jupyterlab/launcher": "^2.0.0-beta.2",
+    "@jupyterlab/observables": "^3.0.0-beta.2",
+    "@jupyterlab/notebook": "^2.0.0-beta.2",
+    "@jupyterlab/services": "^5.0.0-beta.2",
+    "@lumino/algorithm": "^1.2.0",
+    "@lumino/coreutils": "^1.3.1",
+    "@lumino/disposable": "^1.2.0",
+    "@lumino/widgets": "^1.8.0",
     "murmurhash-js": "^1.0.0",
     "react-inspector": "^2.0.0",
     "vscode-debugprotocol": "^1.37.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@jupyterlab/testutils": "^1.1.0",
-    "@types/chai": "^4.1.3",
+    "@babel/preset-env": "^7.7.6",
+    "@jupyterlab/testutils": "^2.0.0-beta.2",
+    "@types/chai": "^4.2.7",
     "@types/codemirror": "0.0.76",
     "@types/jest": "^24.0.17",
     "@types/murmurhash-js": "1.0.3",
     "chai": "^4.2.0",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
-    "jest-junit": "^6.3.0",
-    "lint-staged": "^9.2.1",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "jest-junit": "^10.0.0",
+    "jest-raw-loader": "^1.0.1",
+    "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
-    "rimraf": "~2.6.2",
+    "rimraf": "~3.0.0",
     "ts-jest": "^24",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typedoc": "^0.15.0",
-    "typescript": "~3.7.2"
+    "typedoc": "^0.15.4",
+    "typescript": "~3.7.3"
   },
   "husky": {
     "hooks": {
