Install JupyterLab beta from prerelease channel

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,8 +1,9 @@
 name: jupyterlab-debugger
 channels:
 - conda-forge
+- conda-forge/label/prerelease-jupyterlab
 dependencies:
-- jupyterlab=1.2
+- jupyterlab=2
 - nodejs
 - notebook=6
 - ptvsd
