--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,9 @@ steps:
 
 - bash: |
     source activate jupyterlab-debugger
-    conda install --yes --quiet -c conda-forge nodejs xeus-python=0.6.7 ptvsd python=$PYTHON_VERSION
-    python -m pip install -U --pre jupyterlab
+    conda install --yes --quiet -c conda-forge \
+                                -c conda-forge/label/prerelease-jupyterlab \
+                                nodejs jupyterlab=2 xeus-python=0.6.7 ptvsd python=$PYTHON_VERSION
   displayName: Install dependencies
 
 - bash: |
