--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/debugger",
-  "version": "0.1.2",
+  "version": "0.2.0-alpha.1",
   "description": "JupyterLab - Debugger Extension",
   "homepage": "https://github.com/jupyterlab/debugger",
   "bugs": {
