--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -38,6 +38,7 @@
     "@blueprintjs/select": "^3.11.2",
     "@jupyterlab/coreutils": "^4.0.0-beta.2",
     "@lumino/coreutils": "^1.4.2",
+    "@lumino/signaling": "^1.3.4",
     "@lumino/virtualdom": "^1.4.0",
     "@lumino/widgets": "^1.10.0",
     "react": "~16.9.0",
