--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2, 0, 0, 'beta', 3
+current_version = 2, 0, 0, 'candidate', 0
 commit = False
 tag = False
 parse = (?P<major>\d+)\,\ (?P<minor>\d+)\,\ (?P<patch>\d+)\,\ \'(?P<release>\S+)\'\,\ (?P<build>\d+)
@@ -17,3 +17,4 @@ values =
 [bumpversion:part:build]
 
 [bumpversion:file:jupyterlab/_version.py]
+
