--- a/packages/vdom-extension/tsconfig.json
+++ b/packages/vdom-extension/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "../rendermime"
     },
     {
+      "path": "../ui-components"
+    },
+    {
       "path": "../vdom"
     }
   ]
