deprecated `justify` => `elementPosition` across codebase
- also added some stuff to .prettierignore, etc to protect my ide
files (esp local history in `.history`) from the linters

--- a/.eslintignore
+++ b/.eslintignore
@@ -23,3 +23,10 @@ jupyterlab/staging/index.js
 jupyterlab/staging/yarn.js
 jupyterlab/themes
 packages/ui-components/src/icon/iconimports.ts
+
+# jetbrains IDE stuff
+.idea/
+
+# ms IDE stuff
+.history/
+.vscode/
