--- a/packages/docmanager-extension/package.json
+++ b/packages/docmanager-extension/package.json
@@ -48,6 +48,7 @@
     "@lumino/algorithm": "^1.2.3",
     "@lumino/coreutils": "^1.4.2",
     "@lumino/disposable": "^1.3.5",
+    "@lumino/polling": "^1.0.4",
     "@lumino/widgets": "^1.11.1"
   },
   "devDependencies": {
