run the frequently failing test-services first

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "clean:src": "jlpm run clean",
     "clean:test": "lerna run clean --scope \"@jupyterlab/test-*\"",
     "clean:utils": "cd buildutils && jlpm run clean",
-    "coverage": "lerna run coverage --scope \"@jupyterlab/test-*\" --stream --concurrency 1",
+    "covcmd": "lerna run coverage --stream --concurrency 1",
+    "coverage": "jlpm run covcmd --scope \"@jupyterlab/test-services\" && jlpm run covcmd --scope \"@jupyterlab/test-*\" --ignore \"@jupyterlab/test-services\"",
     "create:package": "node buildutils/lib/create-package.js",
     "create:test": "node buildutils/lib/create-test-package.js",
     "create:theme": "node buildutils/lib/create-theme.js",
