--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "clean:test": "lerna run clean --scope \"@jupyterlab/test-*\"",
     "clean:utils": "cd buildutils && jlpm run clean",
     "covcmd": "lerna run coverage --stream --concurrency 1",
-    "coverage": "jlpm run covcmd --scope \"@jupyterlab/test-services\" && jlpm run covcmd --scope \"@jupyterlab/test-*\" --ignore \"@jupyterlab/test-services\"",
+    "coverage": "jlpm run covcmd --scope \"@jupyterlab/test-*\" --ignore \"@jupyterlab/test-services\"",
+    "coverage:services": "jlpm run covcmd --scope \"@jupyterlab/test-services\"",
     "create:package": "node buildutils/lib/create-package.js",
     "create:test": "node buildutils/lib/create-test-package.js",
     "create:theme": "node buildutils/lib/create-theme.js",
