--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,5 @@ universal=1
 [tool:pytest]
 testpaths=jupyterlab/tests
 norecursedirs=node_modules .git _build
-addopts = --pdbcls=IPython.terminal.debugger:Pdb
+addopts = --pdbcls=IPython.terminal.debugger:Pdb -v --junitxml=junit.xml
 ignore=tests examples
