--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0-beta.2",
-    "@jupyterlab/rendermime": "^2.0.0-beta.2",
+    "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/rendermime": "^2.0.0",
     "mathjax-full": "^3.0.0"
   },
   "devDependencies": {
