--- a/package.json
+++ b/package.json
@@ -48,18 +48,18 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0-beta.2",
-    "@jupyterlab/apputils": "^2.0.0-beta.2",
-    "@jupyterlab/codeeditor": "^2.0.0-beta.2",
-    "@jupyterlab/console": "^2.0.0-beta.2",
-    "@jupyterlab/coreutils": "^4.0.0-beta.2",
-    "@jupyterlab/docregistry": "^2.0.0-beta.2",
-    "@jupyterlab/fileeditor": "^2.0.0-beta.2",
-    "@jupyterlab/launcher": "^2.0.0-beta.2",
-    "@jupyterlab/observables": "^3.0.0-beta.2",
-    "@jupyterlab/notebook": "^2.0.0-beta.2",
-    "@jupyterlab/services": "^5.0.0-beta.2",
-    "@jupyterlab/ui-components": "^2.0.0-beta.2",
+    "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/apputils": "^2.0.0",
+    "@jupyterlab/codeeditor": "^2.0.0",
+    "@jupyterlab/console": "^2.0.0",
+    "@jupyterlab/coreutils": "^4.0.0",
+    "@jupyterlab/docregistry": "^2.0.0",
+    "@jupyterlab/fileeditor": "^2.0.0",
+    "@jupyterlab/launcher": "^2.0.0",
+    "@jupyterlab/observables": "^3.0.0",
+    "@jupyterlab/notebook": "^2.0.0",
+    "@jupyterlab/services": "^5.0.0",
+    "@jupyterlab/ui-components": "^2.0.0",
     "@lumino/algorithm": "^1.2.0",
     "@lumino/coreutils": "^1.3.1",
     "@lumino/disposable": "^1.2.0",
@@ -70,7 +70,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.7.6",
-    "@jupyterlab/testutils": "^2.0.0-beta.2",
+    "@jupyterlab/testutils": "^2.0.0",
     "@types/chai": "^4.2.7",
     "@types/codemirror": "0.0.76",
     "@types/jest": "^24.0.17",
