--- a/packages/statusbar/package.json
+++ b/packages/statusbar/package.json
@@ -43,6 +43,7 @@
     "@lumino/polling": "^1.0.4",
     "@lumino/signaling": "^1.3.5",
     "@lumino/widgets": "^1.11.1",
+    "csstype": "~2.6.9",
     "react": "~16.9.0",
     "typestyle": "^2.0.4"
   },
