Colorize the listed extensions

--- a/examples/listings/package.json
+++ b/examples/listings/package.json
@@ -5,11 +5,59 @@
   "scripts": {
     "build": "webpack",
     "clean": "rimraf build",
-    "prepublishOnly": "npm run build",
-    "start": "concurrently \"jupyter lab --dev-mode\" \"python main.py\""
+    "prepublishOnly": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/application-extension": "^2.0.0",
+    "@jupyterlab/apputils-extension": "^2.0.0",
+    "@jupyterlab/buildutils": "^2.0.0",
+    "@jupyterlab/codemirror-extension": "^2.0.0",
+    "@jupyterlab/completer-extension": "^2.0.0",
+    "@jupyterlab/console-extension": "^2.0.0",
+    "@jupyterlab/csvviewer-extension": "^2.0.0",
+    "@jupyterlab/docmanager-extension": "^2.0.0",
+    "@jupyterlab/filebrowser-extension": "^2.0.0",
+    "@jupyterlab/extensionmanager-extension": "^2.0.0",
+    "@jupyterlab/fileeditor-extension": "^2.0.0",
+    "@jupyterlab/help-extension": "^2.0.0",
+    "@jupyterlab/imageviewer-extension": "^2.0.0",
+    "@jupyterlab/inspector-extension": "^2.0.0",
+    "@jupyterlab/launcher-extension": "^2.0.0",
+    "@jupyterlab/mainmenu-extension": "^2.0.0",
+    "@jupyterlab/markdownviewer-extension": "^2.0.0",
+    "@jupyterlab/mathjax2-extension": "^2.0.0",
+    "@jupyterlab/notebook-extension": "^2.0.0",
+    "@jupyterlab/rendermime-extension": "^2.0.0",
+    "@jupyterlab/running-extension": "^2.0.0",
+    "@jupyterlab/settingeditor-extension": "^2.0.0",
+    "@jupyterlab/shortcuts-extension": "^2.0.0",
+    "@jupyterlab/statusbar-extension": "^2.0.0",
+    "@jupyterlab/tabmanager-extension": "^2.0.0",
+    "@jupyterlab/terminal-extension": "^2.0.0",
+    "@jupyterlab/theme-dark-extension": "^2.0.0",
+    "@jupyterlab/theme-light-extension": "^2.0.0",
+    "@jupyterlab/tooltip-extension": "^2.0.0",
+    "@jupyterlab/ui-components-extension": "^2.0.0",
+    "es6-promise": "~4.2.8",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0"
+  },
   "devDependencies": {
-    "concurrently": "5.1.0"
+    "css-loader": "~3.2.0",
+    "file-loader": "~5.0.2",
+    "fs-extra": "^8.1.0",
+    "glob": "~7.1.6",
+    "mini-css-extract-plugin": "~0.8.0",
+    "raw-loader": "~4.0.0",
+    "read-package-tree": "^5.3.1",
+    "rimraf": "~3.0.0",
+    "style-loader": "~1.0.1",
+    "svg-url-loader": "~3.0.3",
+    "url-loader": "~3.0.0",
+    "watch": "~1.0.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "whatwg-fetch": "^3.0.0"
   }
 }
