Add settings to listings example

--- a/examples/listings/Makefile
+++ b/examples/listings/Makefile
@@ -1,4 +1,5 @@
-start:
+dev:
 	@exec echo open http://localhost:8888/listings/blacklist.json
-	echo open http://localhost:8888/listings/whitelist.json
+	@exec echo open http://localhost:8888/listings/whitelist.json
+	@exec echo
 	@exec python main.py --dev-mode --watch
