--- a/examples/listings/Makefile
+++ b/examples/listings/Makefile
@@ -1,5 +1,4 @@
 dev:
-	@exec echo open http://localhost:8888/listings/blacklist.json
-	@exec echo open http://localhost:8888/listings/whitelist.json
-	@exec echo
+	@exec echo Blacklist URI: http://localhost:8888/listings/blacklist.json
+	@exec echo Whitelist URI: http://localhost:8888/listings/whitelist.json
 	@exec python main.py --dev-mode --watch
