--- a/.eslintignore
+++ b/.eslintignore
@@ -6,6 +6,7 @@ tests/**/coverage
 
 dev_mode/index.js
 dev_mode/schemas
+dev_mode/listings
 !dev_mode/static/index.out.js
 dev_mode/static
 dev_mode/themes
@@ -14,11 +15,13 @@ docs/_build
 docs/api
 examples/app/build
 examples/app/schemas
+examples/app/listings
 examples/app/themes
 examples/chrome-example-test.js
 jupyterlab/chrome-test.js
 jupyterlab/geckodriver
 jupyterlab/schemas
+jupyterlab/listings
 jupyterlab/staging/index.js
 jupyterlab/staging/yarn.js
 jupyterlab/themes
