--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupyterlab/debugger",
-  "version": "0.2.0-alpha.3",
+  "version": "0.2.0-beta.1",
   "description": "JupyterLab - Debugger Extension",
   "keywords": [
     "jupyter",
