--- a/packages/extensionmanager/package.json
+++ b/packages/extensionmanager/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@jupyterlab/apputils": "^2.0.0",
+    "@jupyterlab/coreutils": "^4.0.0",
     "@jupyterlab/services": "^5.0.0",
     "@jupyterlab/ui-components": "^2.0.0",
     "@lumino/messaging": "^1.3.3",
