--- a/examples/listings/Makefile
+++ b/examples/listings/Makefile
@@ -1,18 +1,22 @@
 print-listings:
-	@exec echo Blacklist URI: http://localhost:8888/listings/blacklist.json
-	@exec echo Whitelist URI: http://localhost:8888/listings/whitelist.json
+	@exec echo Local Blacklist URI: http://localhost:8888/listings/blacklist.json
+	@exec echo Local Whitelist URI: http://localhost:8888/listings/whitelist.json
 
+#	  --LabServerApp.blacklist_uris=http://localhost:8888/listings/blacklist.json \
+#	  --LabServerApp.whitelist_uris=http://localhost:8888/listings/whitelist.json
 dev: print-listings
 	@exec python main.py \
 	  --dev \
 	  --no-browser \
-	  --LabServerApp.blacklist_uri=http://localhost:8888/listings/blacklist.json \
-	  --LabServerApp.whitelist_uri=http://localhost:8888/listings/whitelist.json
+	  --LabServerApp.blacklist_uris=https://raw.githubusercontent.com/datalayer-jupyterlab/jupyterlab-listings-example/master/blacklist.json \
+	  --LabServerApp.whitelist_uris=https://raw.githubusercontent.com/datalayer-jupyterlab/jupyterlab-listings-example/master/whitelist.json
 
+#	  --LabServerApp.blacklist_uris=http://localhost:8888/listings/blacklist.json \
+#	  --LabServerApp.whitelist_uris=http://localhost:8888/listings/whitelist.json
 dev-watch: print-listings
 	@exec python main.py \
 	  --dev \
 	  --no-browser \
-	  --LabServerApp.blacklist_uri=http://localhost:8888/listings/blacklist.json \
-	  --LabServerApp.whitelist_uri=http://localhost:8888/listings/whitelist.json \
-	  --watch
+	  --watch \
+	  --LabServerApp.blacklist_uris=https://raw.githubusercontent.com/datalayer-jupyterlab/jupyterlab-listings-example/master/blacklist.json \
+	  --LabServerApp.whitelist_uris=https://raw.githubusercontent.com/datalayer-jupyterlab/jupyterlab-listings-example/master/whitelist.json
