--- a/packages/extensionmanager/package.json
+++ b/packages/extensionmanager/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/ui-components": "^2.0.0",
     "@lumino/messaging": "^1.3.3",
     "@lumino/polling": "^1.0.4",
+    "@lumino/signaling": "^1.3.5",
     "react": "~16.9.0",
     "react-paginate": "^6.3.2",
     "semver": "^6.3.0"
