--- a/packages/extensionmanager/package.json
+++ b/packages/extensionmanager/package.json
@@ -38,6 +38,7 @@
     "@jupyterlab/apputils": "^2.0.0",
     "@jupyterlab/coreutils": "^4.0.0",
     "@jupyterlab/services": "^5.0.0",
+    "@jupyterlab/settingregistry": "^2.0.0",
     "@jupyterlab/ui-components": "^2.0.0",
     "@lumino/messaging": "^1.3.3",
     "@lumino/polling": "^1.0.4",
