--- a/packages/toc/package.json
+++ b/packages/toc/package.json
@@ -38,20 +38,20 @@
     ]
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0",
-    "@jupyterlab/apputils": "^1.0.0",
-    "@jupyterlab/cells": "^1.0.0",
-    "@jupyterlab/coreutils": "^3.0.0",
-    "@jupyterlab/docmanager": "^1.0.0",
-    "@jupyterlab/docregistry": "^1.0.0",
-    "@jupyterlab/fileeditor": "^1.0.0",
-    "@jupyterlab/markdownviewer": "^1.0.0",
-    "@jupyterlab/notebook": "^1.0.0",
-    "@jupyterlab/rendermime": "^1.0.0",
-    "@phosphor/algorithm": "^1.1.3",
-    "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/messaging": "^1.2.3",
-    "@phosphor/widgets": "^1.8.0",
+    "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/apputils": "^2.0.0",
+    "@jupyterlab/cells": "^2.0.0",
+    "@jupyterlab/coreutils": "^4.0.0",
+    "@jupyterlab/docmanager": "^2.0.0",
+    "@jupyterlab/docregistry": "^2.0.0",
+    "@jupyterlab/fileeditor": "^2.0.0",
+    "@jupyterlab/markdownviewer": "^2.0.0",
+    "@jupyterlab/notebook": "^2.0.0",
+    "@jupyterlab/rendermime": "^2.0.0",
+    "@lumino/algorithm": "^1.2.3",
+    "@lumino/coreutils": "^1.4.2",
+    "@lumino/messaging": "^1.3.3",
+    "@lumino/widgets": "^1.10.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
