Add playwright integration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "benchmarks",
       "dev_mode",
       "examples/*",
       "packages/*",
