--- a/bechmarks/tsconfig.json
+++ b/bechmarks/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
+    "lib": ["ES2019"],
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
