remove listings folder

--- a/packages/extensionmanager-extension/package.json
+++ b/packages/extensionmanager-extension/package.json
@@ -54,7 +54,6 @@
   },
   "jupyterlab": {
     "extension": true,
-    "schemaDir": "schema",
-    "listingDir": "listing"
+    "schemaDir": "schema"
   }
 }
