--- a/.eslintignore
+++ b/.eslintignore
@@ -6,7 +6,6 @@ tests/**/coverage
 
 dev_mode/index.js
 dev_mode/schemas
-dev_mode/listings
 !dev_mode/static/index.out.js
 dev_mode/static
 dev_mode/themes
@@ -15,13 +14,12 @@ docs/_build
 docs/api
 examples/app/build
 examples/app/schemas
-examples/app/listings
 examples/app/themes
 examples/chrome-example-test.js
 jupyterlab/chrome-test.js
 jupyterlab/geckodriver
 jupyterlab/schemas
-jupyterlab/listings
+packages/extensionmanager-extension/examples/listings
 jupyterlab/staging/index.js
 jupyterlab/staging/yarn.js
 jupyterlab/themes
