--- a/.prettierignore
+++ b/.prettierignore
@@ -8,7 +8,6 @@ tests/**/coverage
 .eggs
 dev_mode/index.js
 dev_mode/schemas
-dev_mode/listings
 dev_mode/static
 dev_mode/themes
 dev_mode/workspaces
@@ -17,14 +16,13 @@ docs/api
 examples/app/build
 examples/app/themes
 examples/app/schemas
-examples/app/listings
 jupyterlab/schemas
-jupyterlab/listings
 jupyterlab/themes
 jupyterlab/geckodriver
 jupyterlab/staging/yarn.js
 jupyterlab/staging/index.js
 packages/ui-components/src/icon/iconimports.ts
+packages/extensionmanager/examples/listings
 
 # jetbrains IDE stuff
 .idea/
