--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -4,23 +4,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "analyze": "cd .. && jupyter lab --dev benchmarks/analysis.vl.json",
-    "build": "tsc",
-    "jlab:build": "cd .. && jlpm run build",
-    "jlab:start": "fkill -s :9999 && cd .. && jupyter lab --dev --no-browser --port 9999 --LabApp.password= --LabApp.token=",
-    "jlab:wait": "wait-on http-get://localhost:9999/lab",
-    "run": "node --experimental-modules lib/index.js",
-    "run-when-ready": "jlpm run jlab:wait && jlpm run run",
-    "setup": "jlpm && node node_modules/playwright/install.js && jlpm run jlab:build && jlpm run build",
-    "start": "jlpm run setup && jlpm run start-and-run",
-    "start-and-run": "concurrently --kill-others 'jlpm run jlab:start'  'jlpm run run-when-ready' "
+    "build:jlab": "cd .. && jlpm run build",
+    "build:benchmark": "tsc",
+    "kill:jlab": "fkill -s :9999",
+    "start:jlab": "cd .. && jupyter lab --dev --no-browser --port 9999 --LabApp.password= --LabApp.token=",
+    "start:benchmark": "wait-on http-get://localhost:9999/lab && node --experimental-modules lib/index.js",
+    "start:all": "npm-run-all kill:jlab --parallel start:jlab start:benchmark --race",
+    "start:analysis": "cd .. && jupyter lab --dev benchmarks/analysis.vl.json",
+    "all": "npm-run-all build:* start:all start:analysis"
   },
   "dependencies": {
     "playwright": "0.11.1"
   },
   "devDependencies": {
-    "concurrently": "5.1.0",
     "fkill-cli": "6.0.1",
+    "npm-run-all": "4.1.5",
     "typescript": "~3.7.3",
     "wait-on": "4.0.1"
   }
