ignore plotly iframes

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ packages/services/examples/node/config.json
 examples/app/build
 examples/app/themes
 examples/app/schemas
+iframe_figures/
 
 lerna-debug.log
 yarn-error.log
