Add more checks for plotly and stop automatically

--- a/benchmarks/tsconfig.json
+++ b/benchmarks/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "DOM"],
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
