--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -7,7 +7,7 @@
     "build:jlab": "cd .. && jlpm run build",
     "build:benchmark": "tsc",
     "start:jlab": "fkill -s :9999 && cd .. && jupyter lab --dev --no-browser --port 9999 --LabApp.password= --LabApp.token=",
-    "start:benchmark": "wait-on http-get://localhost:9999/lab && node --experimental-modules lib/index.js",
+    "start:benchmark": "wait-on http-get://localhost:9999/lab && node --experimental-modules --es-module-specifier-resolution=node lib/index.js",
     "start:all": "npm-run-all --parallel start:jlab start:benchmark --race",
     "start:analysis": "cd .. && jupyter lab --dev benchmarks/analysis.vl.json",
     "all": "npm-run-all build:* start:all start:analysis"
