--- a/benchmarks/tsconfig.json
+++ b/benchmarks/tsconfig.json
@@ -8,6 +8,7 @@
     "rootDir": "./src",
     "strict": true,
     "lib": ["ES2019", "DOM"],
+    "module": "ESNEXT",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
